# bgg-comment-score-predictor

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-db.txt  requirements-mlflow.txt  requirements-pipeline-local.txt  requirements-scraping.txt  requirements.txt  setup.py
.github/: secret_scanning.yml
.github/workflows/: build.yml  train.yml
configs/: data_config.yaml  model_config.yaml
data/: games_detailed_info2025.csv
deployment/api/: app.py  requirements.txt
deployment/api/routers/: internal.py  predict.py
deployment/api/utils/: dependencies.py  logs.py
deployment/scripts/: generate_spec.py
docker/: Dockerfile
notebooks/: Untitled.ipynb
notebooks/mlflow/: mlflow-tutorial.ipynb  transformers-fine-tuning.ipynb
scripts/: scrape_user_comment_bgg.py
scripts/data/: preprocess_data.py  split_datafile.py
scripts/database/: init_db.py  populate_comment_language.py  populate_db.py  schema.sql
serving/: Dockerfile
serving/api/: requirements.txt
serving/api/routers/: internal.py  predict.py
serving/api/utils/: models.py
src/bgg_playground/configs/: model_config.py
src/bgg_playground/database/: db_config.py  db_queries.py
src/bgg_playground/modeling/: train.py
src/bgg_playground/pipeline/: pipeline.py  train.py
src/bgg_playground/utils/: logs.py
src/database/: config.yaml  db_queries.py  populate_db.py
src/pipeline/: pipeline.py
tests/: test_scrape_user_comment_bgg.py
tests/database/: test_db_config.py
