[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "voize_demo"
version = "0.1.0"
description = "Voize Demo API"
authors = ["Lan Jiang"]
packages = [
    {include = "api", from = "deployment"},
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic = "^2.4.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.6.6"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-env = "^1.0.1"
pytest-cov = "^5.0.0"
httpx = "^0.25.0"

